# vk_cv

./: .gitignore  Cargo.toml  LICENSE  README.md  test.comp.glsl  upload.sh
examples/: camera_tracker.rs  pipeline.rs
examples/ros2-publisher/: Cargo.toml
examples/ros2-publisher/src/: main.rs
ocvref/: Cargo.toml
ocvref/src/: main.rs
ros1-gazebo/: Cargo.toml
ros1-gazebo/ros_pkg/: CMakeLists.txt  package.xml
ros1-gazebo/ros_pkg/launch/: vkcv.launch
ros1-gazebo/src/: main.rs  msg.rs  pipeline.rs
ros1-publisher/: Cargo.toml
ros1-publisher/ros_pkg/: CMakeLists.txt  package.xml
ros1-publisher/ros_pkg/launch/: vkcv.launch
ros1-publisher/src/: main.rs  msg.rs  pipeline.rs
ros2-publisher/: Cargo.toml
ros2-publisher/src/: main.rs  pipeline.rs
src/: lib.rs  main.rs  realsense.rs  utils.rs  vk_init.rs
src/endpoints/: image_download.rs  image_upload.rs
src/processing_elements/: color_filter.rs  convolution.rs  convolution_2p.rs  filter.rs  grayscale.rs  hsvconv.rs  input.rs  mod.rs  morphology.rs  output.rs  pooling.rs  tracker.rs
src/shaders/: color_filter.comp.glsl  convelution.comp.glsl  convolution3x3.comp.glsl  grayscale.comp.glsl  hsvconv.comp.glsl  mean_pooling_2.comp.glsl  mean_pooling_2.sampler.comp.glsl  mean_pooling_4.comp.glsl  morphology3x3.comp.glsl  pooling_2x2.comp.glsl  tracker_2x.comp.glsl  tracker_4x.comp.glsl  tracker_canvas.comp.glsl  tracker_cm.comp.glsl
viewer/: Cargo.toml
viewer/src/: main.rs  pipeline.rs
vkcv/: .gitignore  Cargo.toml
vkcv/examples/: camera_tracker.rs  pipeline.rs
vkcv/src/: draw.rs  lib.rs  realsense.rs  utils.rs  vk_init.rs
vkcv/src/endpoints/: image_download.rs  image_upload.rs  mod.rs
vkcv/src/processing_elements/: color_filter.rs  convolution.rs  convolution_2p.rs  grayscale.rs  hsvconv.rs  input.rs  mod.rs  morphology.rs  output.rs  pooling.rs  tracker.rs
vkcv/src/shaders/: color_filter.comp.glsl  convolution3x3.comp.glsl  convolution_2p_3x3.comp.glsl  convolution_2p_5x5.comp.glsl  grayscale.comp.glsl  hsvconv.comp.glsl  mean_pooling_2.comp.glsl  mean_pooling_2.sampler.comp.glsl  mean_pooling_4.comp.glsl  mean_pooling_4.sampler.comp.glsl  morphology3x3.comp.glsl  pooling_2x2.comp.glsl  sampler_test.comp.glsl  tracker_canvas.comp.glsl  tracker_cm.comp.glsl
