[package]
name = "vkcnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.27"
vulkano-shaders = "0.27"
png = "0.17"
anyhow = "1"

realsense-sys = "2.47.0"
# gbm = "0.7.0"
# drm-rs = "0.1"