[package]
name = "ros1-publisher"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vkcv = { path = "../vkcv" }
tokio = { version = "1.15.0", features = ["full"] }
structopt = "0.3"
turbojpeg = "0.3"
rosrust = "0.9"
rosrust_msg = "0.1"