[package]
name = "vkcv"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.30"
vulkano-shaders = "0.30"
png = "0.17"
anyhow = "1"
half = "2.0"
realsense-sys = {version="2.47.0", features=["buildtime-bindgen"]}

[dev-dependencies]
sysinfo = "0.24.6"