[package]
name = "vkcv"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.1"
vulkano-shaders = "0.32.0"
png = "0.17"
anyhow = "1"
half = "2.1"
realsense-sys = {version="2.47.0", features=["buildtime-bindgen"]}
bytemuck = { version = "1.12", features = ["derive", "extern_crate_std", "min_const_generics"] }

[dev-dependencies]
sysinfo = "0.27.7"