<?xml version="1.0"?>
<package format="2">
  <name>vkcv</name>
  <version>1.0.0</version>
  <description>
  VKCV ros node
  </description>

  <maintainer email="no@mai.xyz"></maintainer>
  <author email="no@mai.xyz"></author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

   <!-- packages -->
</package>
